# intellwheels_nav

./: .gitignore  README.md  README.txt  backup.launch  dump.yaml  req.txt  requirements.txt  wheelchair.urdf
src/intellwheels_desc/: CMakeLists.txt  package.xml
src/intellwheels_desc/launch/: debug.launch  main.launch  one_robot.launch  robots.launch  wheelchair.launch  wheelchair2.launch
src/intellwheels_desc/meshes/: caster_arm.dae  caster_arm_old.dae
src/intellwheels_desc/rviz/: config.rviz
src/intellwheels_desc/urdf/: base.gazebo.xacro  base.urdf.xacro  caster.urdf.xacro  caster_arm.urdf.xacro  caster_wheel.urdf.xacro  common.urdf.xacro  diff_drive.gazebo.xacro  drive_wheel.gazebo.xacro  drive_wheel.urdf.xacro  materials.gazebo.xacro  original.sdf  original.urdf  realsense.gazebo.xacro  realsense.urdf.xacro  rplidar.gazebo.xacro  rplidar.urdf.xacro  wheelchair.urdf.xacro
src/intellwheels_desc/urdf/old/: wheelchair2.urdf.xacro
src/intellwheels_echo/: CMakeLists.txt  listener.py  package.xml  talker.py  talker_listener.launch
src/intellwheels_gazebo_nav/: CMakeLists.txt  package.xml
src/intellwheels_gazebo_nav/config/: amcl.yaml  amcl_office.yaml  common_costmap.yaml  global_costmap.yaml  local_costmap.yaml  local_planner.yaml
src/intellwheels_gazebo_nav/launch/: amcl_robot1.launch  main.launch  main_multiple.launch  office.launch  robots.launch
src/intellwheels_gazebo_nav/rviz/: config.rviz  lab.rviz  lab2robots.rviz  lab_feup.rviz  navigation1chairs.rviz
src/intellwheels_gazebo_nav/worlds/: lab.world
src/intellwheels_gazebo_nav/worlds/lab2robots/: lab2robots.yaml
src/intellwheels_gazebo_nav/worlds/lab_feup/: lab_feup.world
src/intellwheels_irl_nav/: CMakeLists.txt  package.xml
src/intellwheels_irl_nav/config/: amcl.yaml  common_costmap.yaml  local_costmap.yaml  local_planner.yaml  nav.yaml
src/intellwheels_irl_nav/include/: OdomTwister.h
src/intellwheels_irl_nav/launch/: nav.launch  rviz.launch
src/intellwheels_irl_nav/rviz/: config.rviz
src/intellwheels_irl_nav/src/: OdomTwister.cpp
src/intellwheels_irl_nav/worlds/: lab.yaml
src/intellwheels_move_goal/: CMakeLists.txt  main.launch  package.xml  send_goal_robot1  send_goal_robot1.py  send_goal_robot2  send_goal_robot2.py  setup.py
src/intellwheels_move_goal/launch/: main.launch
src/intellwheels_move_goal/src/: listener.py  send_goal_robot2.py  talker.py
src/intellwheels_multi_chairs/: CMakeLists.txt  package.xml
src/intellwheels_multi_chairs/launch/: amcl_robot1.launch  amcl_robot2.launch  amcl_robot3.launch  empty_office.launch  empty_office_no_gazebo.launch  empty_office_robot1.launch  empty_office_robot2.launch  main.launch  move_base_1.launch  move_base_2.launch  move_base_3.launch  one_robot.launch  robot.launch  robot1.launch  robot2.launch  robots.launch  rviz.launch
src/intellwheels_multi_chairs/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/intellwheels_multi_chairs/rviz/: navigation.rviz  navigation1chairs.rviz  navigation1chairs_robot1.rviz  navigation1chairs_robot2.rviz  navigation2chairs.rviz
src/intellwheels_nav/: CMakeLists.txt  package.xml
src/intellwheels_nav/config/: amcl.gz.yaml  common_costmap.gz.yaml  local_planner.gz.yaml
src/intellwheels_nav/launch/: gazebo.launch  main.launch
src/intellwheels_nav/rviz/: config.gz.rviz  config.rviz
src/intellwheels_nav/worlds/: lab.gazebo.world  lab.world
src/intellwheels_rl/: CMakeLists.txt  package.xml  setup.py
src/intellwheels_rl/config/: lab.yaml  my_map.pgm
src/intellwheels_rl/launch/: base_robot_dqn_stage_1.launch  dqn_stage_1.launch  gazebo_nav_dqn.launch  main.launch  multi_dqn_stage.launch  multi_dqn_stage_1.launch  robot1_dqn.launch  robot1_dqn_stage_1.launch  robot1_dqn_test.launch  robot1_qlearn.launch  robot1_qlearn_test.launch  robot2_dqn.launch  robot2_dqn_stage_1.launch  robot2_dqn_test.launch  robot2_qlearn.launch  robots.launch
src/intellwheels_rl/metrics/: plotgfx_robot1_dqn.py  plotgfx_robot1_qlearn.py  plotgfx_two_robots_dqn_trial.py  plotgfx_two_robots_qlearn_trial.py  robot1_dqn_all_02_trajetory.csv  robot1_dqn_all_04_trajetory.csv  robot1_dqn_all_05_trajetory.csv  robot1_qlearn_all_03_trajectory.csv  robot_two_robots_dqn_all_01_trajectory_robot1.csv  robot_two_robots_dqn_all_01_trajectory_robot2.csv  robot_two_robots_dqn_all_02_trajectory_robot1.csv  robot_two_robots_dqn_all_02_trajectory_robot2.csv  robot_two_robots_dqn_all_03_trajectory_robot1.csv  robot_two_robots_dqn_all_03_trajectory_robot2.csv  robot_two_robots_qlearn_all_01_trajectory_robot2.csv  robot_two_robots_qlearn_all_03_trajectory_robot1.csv  robot_two_robots_qlearn_all_03_trajectory_robot2.csv  robot_two_robots_qlearn_all_05_trajectory_robot1.csv  robot_two_robots_qlearn_all_05_trajectory_robot2.csv
src/intellwheels_rl/nodes/: dqn_stage_1
src/intellwheels_rl/rviz/: navigation2chairs.rviz
src/intellwheels_rl/save_model/: base_robot_stage_1_10.h5  robot1_dqn.csv  robot1_dqn_240.h5  robot1_dqn_goal.csv  robot1_dqn_trajectory.csv  robot1_qlearn.csv  robot1_qlearn_goal.csv  robot1_qlearn_trajectory.csv  robot1_stage_1_90.h5  robot2_dqn.csv  robot2_dqn_150.h5  robot2_dqn_160.h5  robot2_dqn_170.h5  robot2_dqn_180.h5  robot2_dqn_close_to_chair.csv  robot2_dqn_trajectory.csv  robot2_qlearn.csv  robot2_qlearn_close_to_chair.csv  robot2_qlearn_trajectory.csv  stage_1_430.h5  stage_1_460.h5
src/intellwheels_rl/src/: base_robot_dqn_stage_1.py  base_robot_environment_stage_1.py  respawnGoal.py
src/intellwheels_stage_nav/: CMakeLists.txt  package.xml
src/intellwheels_stage_nav/config/: common_costmap.yaml  global_planner.yaml  loc.yaml  local_costmap.yaml  local_planner.yaml  nav.yaml  recovery.yaml
src/intellwheels_stage_nav/launch/: main.launch  main4stage.launch
src/intellwheels_stage_nav/rviz/: config.rviz  lab.rviz  lab_feup.rviz
src/intellwheels_stage_nav/worlds/: lab2.world
src/intelwheels_irl/: CMakeLists.txt  package.xml
src/intelwheels_irl/rviz/: config.rviz
(+499 files in other folders)
