<?xml version="1.0"?>
<package format="2">
	<name>intellwheels_desc</name>
	<version>0.0.0</version>
	<description>Intellwheels description package</description>
	<maintainer email="todo@todo.todo">todo</maintainer>
	<license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>
	<exec_depend>gazebo_ros</exec_depend>
	<export>
		<gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/.." />
	</export>
</package>
