<?xml version="1.0"?>
<package format="2">
  <name>intellwheels_gazebo_nav</name>
  <version>0.0.0</version>
  <description>Intellwheels navigation package for the gazebo simulator</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
