<?xml version="1.0"?>
<package format="2">
	<name>intellwheels_gazebo_nav</name>
	<version>0.0.0</version>
	<description>Intellwheels navigation package for the gazebo simulator</description>
	<maintainer email="todo@todo.todo">todo</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>amcl</exec_depend>
	<exec_depend>costmap_converter</exec_depend>
	<exec_depend>gazebo_ros_pkgs</exec_depend>
	<exec_depend>global_planner</exec_depend>
	<exec_depend>map_server</exec_depend>
	<exec_depend>move_base</exec_depend>
	<exec_depend>rviz</exec_depend>
	<exec_depend>spatio_temporal_voxel_layer</exec_depend>
	<exec_depend>teb_local_planner</exec_depend>
	<exec_depend>topic_tools</exec_depend>
</package>
