<?xml version="1.0"?>
<package format="2">
  <name>intellwheels_irl_nav</name>
  <version>0.0.0</version>
  <description>Intellwheels navigation package for the gazebo simulator</description>
  <maintainer email="todo@todo.todo">guest</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>rviz</exec_depend>
</package>
