<?xml version="1.0"?>
<package format="2">
	<name>intellwheels_multi_chairs</name>
	<version>0.0.0</version>
	<description>Intellwheels description package</description>
	<maintainer email="todo@todo.todo">todo</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>gazebo_ros_pkgs</exec_depend>
	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>rqt_robot_steering</exec_depend>
	<exec_depend>rviz</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>rospy</exec_depend>
</package>
