<?xml version="1.0"?>
<package format="2">
  <name>intellwheels_rl</name>
  <version>0.0.0</version>
  <description>Intellwheels send goals to the robots</description>
  <maintainer email="todo@todo.todo">guest</maintainer>
  <license>TODO</license>


  <buildtool_depend >catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <exec_depend>costmap_converter</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>map_server</exec_depend>
	<exec_depend>move_base</exec_depend>
  <exec_depend>rviz</exec_depend>
	<exec_depend>teb_local_planner</exec_depend>

</package>
