<?xml version="1.0"?>
<package format="2">
  <name>intellwheels_rl</name>
  <version>1.0.0</version>
  <description>
    Add reinforcement learning capabilities to the intellwheells chair
  </description>
  
  <maintainer email="todo@todo.todo">todo</maintainer>
	<license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>