<?xml version="1.0"?>
<package format="2">
	<name>intellwheels_stage_nav</name>
	<version>0.0.0</version>
	<description>Intellwheels navigation package for the stage simulator</description>
	<maintainer email="todo@todo.todo">todo</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>costmap_converter</exec_depend>
	<exec_depend>fake_localization</exec_depend>
	<exec_depend>global_planner</exec_depend>
	<exec_depend>map_server</exec_depend>
	<exec_depend>move_base</exec_depend>
	<exec_depend>rviz</exec_depend>
	<exec_depend>stage_ros</exec_depend>
	<exec_depend>teb_local_planner</exec_depend>
	<exec_depend>topic_tools</exec_depend>
</package>
