<?xml version="1.0"?>
<package format="2">
  <name>intelwheels_irl</name>
  <version>0.0.0</version>
  <description>Intellwheels navigation package for the real wheelchair.</description>
  <maintainer email="todo@todo.todo">guest</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
